Improving console logging